--- a/src/.env.example
+++ b/src/.env.example
@@ -2,3 +2,10 @@
 IBBD_SECRET_FILE=data/id_rsa
 IBBD_PUBLIC_FILE=data/id_rsa.pub
 
+# 数据库配置
+DB_TYPE=mysql
+DB_HOST=172.17.0.3
+DB_PORT=3306
+DB_USER=jxc
+DB_NAME=root
+DB_PASSWORD=111111
