完成了用户列表的获取，token的生成，但是验证还没完成

--- a/src/.env.example
+++ b/src/.env.example
@@ -1,6 +1,8 @@
+DEBUG=true
+
 # 私钥与公钥文件
-IBBD_SECRET_FILE=data/id_rsa
-IBBD_PUBLIC_FILE=data/id_rsa.pub
+IBBD_SECRET_KEY_FILE=data/id_rsa
+IBBD_PUBLIC_KEY_FILE=data/id_rsa.pub
 
 # 数据库配置
 DB_TYPE=mysql
